Media/Jackett/jackett.service.yml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
  labels:
    app.kubernetes.io/name: jackett
  annotations:
spec:
  ports:
    - name: http
      port: 9117
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: jackett
