Media/Jackett/jackett.ingress-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jackett.local.flyvmed.dk`) && PathPrefix(`/`)
    kind: Rule
    services:
    - kind: Service
      name: jackett
      namespace: media
      port: 9117
  tls:
    certResolver: letsencrypt
